--- a/Les17 - HW/Les17 - HW.vcxproj
+++ b/Les17 - HW/Les17 - HW.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Worker.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="Worker.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
